@@ -1,3 +1,8 @@
+2010-06-23  Mike Frysinger  <vapier@gentoo.org>
+
+  * configure.ac (fmax): Drop fmax check as it is no longer used.
+  * src/tap/cable/generic.c (fmax): Drop now unused fmax fallback.
+
 2010-06-22  Mike Frysinger  <vapier@gentoo.org>
 
   * src/tap/usbconn/libftdi.c (usbconn_ftdi_flush): Fix gcc printf warning.
